--- a/configs/autoencoder/mnist_28x28x1_vae.yaml
+++ b/configs/autoencoder/mnist_28x28x1_vae.yaml
@@ -4,11 +4,12 @@ ckpt_path: null
 model:
   class_path: models.autoencoder.vae.VAE
   init_args:
-    enc_config:
+    config:
       in_channel: 1
       base_channel: 16
       z_channels: 1
       channel_multipliers:
+        - 1
         - 2
         - 4
       num_res_blocks: 1
@@ -16,21 +17,9 @@ model:
       norm: bn
       attention_resolutions:
         - 1
-      double_latent: True
-
-    dec_config:
-      out_channels: 1
-      base_channel: 16
-      z_channels: 1
-      channel_multipliers:
-        - 2
-        - 4
-      num_res_blocks: 1
-      dropout: 0.1
-      norm: bn
-      attention_resolutions:
-        - 1
-    embed_dim: 1
+      double_z: True
+    embed_dim: 10
+    kl_weight: 0.00025
 
 data:
   class_path: modules.mnist.MNISTDataModule
@@ -38,18 +27,18 @@ data:
     batch_size: 128
 
 trainer:
-  max_epochs: 1000
-  logger:
-    class_path: lightning.pytorch.loggers.WandbLogger
-    init_args:
-      name: test
-      project: MINST_VAE
-      offline: False
-      save_dir: ./log
+  max_epochs: 100
+#  logger:
+#    class_path: lightning.pytorch.loggers.WandbLogger
+#    init_args:
+#      name: test
+#      project: MINST_VAE
+#      offline: False
+#      save_dir: ./log
 
   callbacks: 
     - class_path: modules.callbacks.ImageLogger
       init_args:
-        batch_frequency: 1000
+        batch_frequency: 10000
         max_images: 8
-        rescale: True
+        rescale: False
