--- a/configs/autoencoder/mnist_7x7x2_vqvae.yaml
+++ b/configs/autoencoder/mnist_7x7x2_vqvae.yaml
@@ -2,12 +2,16 @@ seed_everything: 42
 ckpt_path: null
 
 model:
-  class_path: models.autoencoder.vae.VAE
+  class_path: models.autoencoder.vqvae.VQVAE
   init_args:
+    learning_rate: 0.002
+    betas: 
+      - 0.9
+      - 0.99
     config:
       in_channel: 1
       base_channel: 16
-      z_channels: 1
+      z_channels: 2
       channel_multipliers:
         - 1
         - 2
@@ -17,24 +21,15 @@ model:
       norm: bn
       attention_resolutions:
         - 1
-      double_z: True
-    embed_dim: 10
-    kl_weight: 0.00025
+    num_embeddings: 100
 
 data:
-  class_path: modules.mnist.MNISTDataModule
+  class_path: modules.datasets.mnist.MNISTDataModule
   init_args:
     batch_size: 128
 
 trainer:
-  max_epochs: 100
-#  logger:
-#    class_path: lightning.pytorch.loggers.WandbLogger
-#    init_args:
-#      name: test
-#      project: MINST_VAE
-#      offline: False
-#      save_dir: ./log
+  max_epochs: 1000
 
   callbacks: 
     - class_path: modules.callbacks.ImageLogger
