--- a/configs/autoencoder/rae_deepflow.yaml
+++ b/configs/autoencoder/rae_deepflow.yaml
@@ -10,13 +10,13 @@ data:
 
 trainer:
   max_epochs: 10 
-  logger:
-    class_path: lightning.pytorch.loggers.WandbLogger
-    init_args:
-      name: setup_run_1
-      project: RAE_VAE
-      offline: False
-      save_dir: ./log
+#  logger:
+#    class_path: lightning.pytorch.loggers.WandbLogger
+#    init_args:
+#      name: setup_run_1
+#      project: RAE_VAE
+#      offline: False
+#      save_dir: ./log
   callbacks: 
     - class_path: modules.callbacks.ImageLogger
       init_args:
@@ -26,27 +26,37 @@ trainer:
 
 # TEST model
 model:
-  class_path: models.autoencoder.vae.VAE
+  class_path: models.autoencoder.deepflow.DeepFlowVQVAE
   init_args:
     learning_rate: 0.002
     betas: 
       - 0.9
       - 0.99
+    latent_dim: 512
     config:
-      in_channel: 8
-      base_channel: 16
-      z_channels: 16
-      double_z: True
-      channel_multipliers:
+      input_shape: 
+        - 8
+        - 64
+        - 64
+      output_shape: 
+        - 8
+        - 64
+        - 64
+      multipliers:
         - 1
+        - 2
+        - 4
         - 4
         - 8
-        - 16
-        - 16
-      num_res_blocks: 2
+      base_channel: 32
+      latent_dim: 32
+      image_layers: 2
+      head_size: 4
+      num_heads: 1
       dropout: 0.0
       norm: bn
       attention_resolutions:
         - 1
         - 2
         - 3
+      
