--- a/configs/autoencoder/rae_vae.yaml
+++ b/configs/autoencoder/rae_vae.yaml
@@ -1,5 +1,5 @@
 seed_everything: 42
-ckpt_path: null # for checkpointing
+ckpt_path: null
 
 data:
   class_path: modules.datasets.rae.RAEDataModule
@@ -7,20 +7,21 @@ data:
     batch_size: 16
     num_workers: 0
     normalize: True
+    subset: img_64x64
 
 trainer:
-  max_epochs: 10 
+  max_epochs: 1000 
   logger:
     class_path: lightning.pytorch.loggers.WandbLogger
     init_args:
-      name: setup_run_1
-      project: RAE_VAE
+      name: run_1
+      project: RAE_64x64_VAE
       offline: False
       save_dir: ./log
   callbacks: 
     - class_path: modules.callbacks.ImageLogger
       init_args:
-        batch_frequency: 100
+        batch_frequency: 1000
         max_images: 8
         rescale: False
 
@@ -28,21 +29,22 @@ trainer:
 model:
   class_path: models.autoencoder.vae.VAE
   init_args:
-    learning_rate: 0.002
+    learning_rate: 0.0002
+    image_key: "field"
     betas: 
       - 0.9
       - 0.99
     config:
       in_channel: 8
       base_channel: 16
-      z_channels: 16
+      z_channels: 64
       double_z: True
       channel_multipliers:
-        - 1
+        - 2
         - 4
         - 8
         - 16
-        - 16
+        - 32
       num_res_blocks: 2
       dropout: 0.0
       norm: bn
