--- a/configs/autoencoder/rae_vqvae_attention.yaml
+++ b/configs/autoencoder/rae_vqvae_attention.yaml
@@ -11,13 +11,13 @@ data:
 
 trainer:
   max_epochs: 1000 
-  logger:
-    class_path: lightning.pytorch.loggers.WandbLogger
-    init_args:
-      name: 29.02.24-12:30
-      project: RAE_64x64_VAE
-      offline: False
-      save_dir: ./log
+#  logger:
+#    class_path: lightning.pytorch.loggers.WandbLogger
+#    init_args:
+#      name: run_1
+#      project: RAE_64x64_VAE
+#      offline: False
+#      save_dir: ./log
   callbacks: 
     - class_path: modules.callbacks.ImageLogger
       init_args:
@@ -27,29 +27,29 @@ trainer:
 
 # TEST model
 model:
-  class_path: models.autoencoder.vae.VAE
+  class_path: models.autoencoder.vqvae.VQVAE_Attention
   init_args:
-    kl_weight: 0.00001 #0.01
-    learning_rate: 0.0002 #0.001
+    kl_weight: 0.01
+    learning_rate: 0.001
     image_key: "field"
+    num_embeddings: 256
     betas: 
-      - 0.9 #0.5
-      - 0.99 #0.9
+      - 0.5
+      - 0.9
     config:
       in_channel: 8
       base_channel: 16
-      z_channels: 64
+      z_channels: 64 #128
       double_z: True
       channel_multipliers:
         - 2
         - 4
         - 8
         - 16
-        - 32
-      num_res_blocks: 2
+      num_res_blocks: 1
       dropout: 0.0
       norm: bn
       attention_resolutions:
         - 1
         - 2
-        - 3
+      num_attention_blocks: 3
